# expense_report

./: .editorconfig  .gitignore  Makefile  pyproject.toml
src/expense_report/: account.py  categorize_functions.py  config.py  enums.py  exceptions.py  main.py
src/expense_report/data_extractors/: base.py  categorize_functions.py  common.py  csv.py  data_models.py  pdf.py
tests/: generate_cembra_pdf.py  test_config.py  test_data_extractors.py
tests/test_data/: post_dummy_export.csv
tests/test_data/neon/: neon_dummy_export.csv
tests/test_data/post/: post_dummy_export.csv
tests/tools/: generate_cembra_pdf.py
